commit my experiments 1-8