@@ -16,22 +16,22 @@ public class DatabaseUtils {
         Title t1 = new Title(1, "讲师");
         Title t2 = new Title(2, "副教授");
         Title t3 = new Title(3, "教授");
-//        titles = List.of(t1, t2, t3);
-        titles= Arrays.asList(t1,t2,t3);
+        titles = List.of(t1, t2, t3);
+       // titles= Arrays.asList(t1,t2,t3);
         // 模拟课程
         Course c1 = new Course(1, "Web开发技术");
         Course c2 = new Course(2, "Java程序设计");
         Course c3 = new Course(3, "数据库原理");
         Course c4 = new Course(4, "软件项目管理");
-        courses= Arrays.asList(c1, c2, c3, c4);
-//        courses = List.of(c1, c2, c3, c4);
+//        courses= Arrays.asList(c1, c2, c3, c4);
+        courses = List.of(c1, c2, c3, c4);
         // 模拟2个教师
-//        Teacher teach1 = new Teacher(1, "唐晨阳", List.of(c1, c4), t3, new Date());
-//        Teacher teach2 = new Teacher(2, "刘春枝", List.of(c2, c3), t2, new Date());
-//        teachers = List.of(teach1, teach2);
-        Teacher teach1 = new Teacher(1, "唐晨阳", Arrays.asList(c1, c4), t3, new Date());
-        Teacher teach2 = new Teacher(2, "刘春枝", Arrays.asList(c2, c3), t2, new Date());
-        teachers = Arrays.asList(teach1, teach2);
+        Teacher teach1 = new Teacher(1, "唐晨阳", List.of(c1, c4), t3, new Date());
+        Teacher teach2 = new Teacher(2, "刘春枝", List.of(c2, c3), t2, new Date());
+        teachers = List.of(teach1, teach2);
+//        Teacher teach1 = new Teacher(1, "唐晨阳", Arrays.asList(c1, c4), t3, new Date());
+//        Teacher teach2 = new Teacher(2, "刘春枝", Arrays.asList(c2, c3), t2, new Date());
+//        teachers = Arrays.asList(teach1, teach2);
     }
 
     /**
